fix(profile): table row height on Chrome
The height set to 100% was causing a layout issue on reposive mode.
In order to fix that the height was set to `unset`.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1842,6 +1842,7 @@ main:has(.chat-container) {
 
     .profile-books {
         .table-row {
+            height: unset;
             grid-template-rows: repeat(4, auto);
         }
 
